--- a/mean-stack-blog/views/index.ejs
+++ b/mean-stack-blog/views/index.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Code Candy Blog</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+
 
 
 </head>
@@ -30,7 +31,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script> 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.13/angular-ui-router.min.js"></script>   
-    <script src="app.js"></script>    
+    <script src="/javascripts/angular.js"></script>
+
 
 
     <script type="text/ng-template" id="/welcome.html">
@@ -159,4 +161,3 @@
 
 </body>
 </html>
-
